# locks

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  justfile  rustfmt.toml
.github/workflows/: build-artifacts.yml  ci.yml  merge.yml  pr.yml
playground/: .prettierignore  package-lock.json  package.json  tsconfig.eslint.json
playground/rust/lox-wasm/: Cargo.toml
playground/rust/lox-wasm/src/: lib.rs
playground/src/: index.html  index.tsx  worker.ts
playground/src/hooks/: useLocks.ts
playground/src/pages/: docs.tsx  playground.tsx  tooling.tsx
res/: grammar.lalrpop
res/benchmarks/: binary_trees.locks  equality.locks  fib.locks  instantiation.locks  invocation.locks  method_call.locks  properties.locks  string_equality.locks  trees.locks  zoo.locks  zoo_batch.locks
res/examples/: precedence.locks  temp.locks  test.locks
res/examples/access/: child_class_change_field_access_implicit_public_to_private.locks  child_class_change_field_access_private_to_public.locks  child_class_change_field_access_public_to_private.locks  child_class_change_method_access_private_to_public.locks  child_class_change_method_access_public_to_private.locks  implicit_public_class_field_get.locks  implicit_public_class_field_set.locks  implicit_public_class_method_call.locks  private_class_constructor.locks  private_class_field_get.locks  private_class_field_get_using_this.locks  private_class_field_set.locks  private_class_method_call.locks  private_class_method_get.locks  public_class_field_get.locks  public_class_field_set.locks  public_class_method_get.locks
res/examples/assignment/: associativity.locks  global.locks  grouping.locks  infix_operator.locks  local.locks  prefix_operator.locks  syntax.locks  to_this.locks
res/examples/block/: empty.locks  scope.locks
res/examples/bool/: equality.locks  false_length.locks  not.locks  true_length.locks
res/examples/call/: object.locks
res/examples/class/: empty.locks  inherit_self.locks  inherited_method.locks  instance_length.locks  length.locks  local_inherit_other.locks  local_inherit_self.locks  local_reference_self.locks  reference_self.locks
res/examples/closure/: assign_in_block.locks  assign_to_closure.locks  assign_to_shadowed_later.locks  close_over_function_parameter.locks  close_over_later_variable.locks  close_over_method_parameter.locks  closed_closure_in_function.locks  nested_closure.locks  open_closure_in_function.locks  reference_closure_multiple_times.locks  reuse_closure_slot.locks  shadow_closure_with_local.locks  unused_closure.locks  unused_later_closure.locks
res/examples/comments/: line_at_eof.locks  unicode.locks
res/examples/const/: collide_with_parameter.locks  duplicate_local.locks  in_middle_of_block.locks  in_nested_block.locks  local_from_method.locks  redeclare_global.locks  redefine_global.locks  scope_reuse_in_different_blocks.locks  shadow_and_local.locks  shadow_global.locks  shadow_local.locks  uninitialized.locks  use_clock_as_var.locks  use_false_as_var.locks  (+4 more)
res/lib/: locks.locks
res/sample_package/: README.md
src/: cmd.rs  diagnose.rs  error.rs  lib.rs  lsp.rs  main.rs  repl.rs
src/syntax/: ast.rs  lexer.rs  mod.rs
src/vm/: chunk.rs  compiler.rs  disassembler.rs  gc.rs  mod.rs  object.rs  op.rs  value.rs
tests/: lang.rs
vsc/: .gitignore  .vscodeignore  extension.ts  justfile  language-configuration.json  locks.tmLanguage.json  locksTaskProvider.ts  package-lock.json  package.json  snippets.json
(+308 files in other folders)
