[package]
authors = [
    "Kylee Tilley <kyleetilley@gmail.com>",
    "Ajeet D'Souza <98ajeet@gmail.com>",
    "Kartik Sharma <kartik.sharma522@gmail.com>",
]
categories = ["development-tools"]
description = "A toy language branched from Lox to learn language implementation. Forked from [loxcraft](https://github.com/ajeetdsouza/loxcraft)"
edition = "2021"
keywords = [
    "cli",
    "compiler",
    "interpreter",
    "language",
    "lox",
    "lsp",
    "parser",
    "parsing",
    "script",
    "scripting",
    "vm",
    "wasm",
    "webassembly",
]
license = "MIT"
name = "locks"
repository = "https://github.com/kyleect/locks"
rust-version = "1.73"
version = "1.0.0"
publish = false

[features]
default = ["lsp", "repl"]
gc-off = []
gc-stress = []
gc-trace = []
lsp = ["dep:tokio", "dep:tower-lsp"]
pprof = ["dep:pprof"]
repl = [
    "dep:dirs",
    "dep:nu-ansi-term",
    "dep:reedline",
    "dep:tree-sitter",
    "dep:tree-sitter-highlight",
    "dep:tree-sitter-lox",
]
vm-trace = []

[dependencies]
anyhow = "1.0.52"
arrayvec = "0.7.2"
clap = { version = "4.0.0", features = ["derive"] }
codespan-reporting = "0.11.1"
dirs = { version = "5.0.0", optional = true }
hashbrown = { version = "0.13.1", default-features = false, features = [
    "inline-more",
] }
iota = "0.2.2"
lalrpop-util = "0.19.6"
logos = "0.12.0"
nu-ansi-term = { version = "0.47.0", optional = true }
pprof = { version = "0.11.1", features = [
    "cpp",
    "flamegraph",
    "prost-codec",
], optional = true }
reedline = { version = "0.18.0", optional = true }
rustc-hash = "1.1.0"
serde = { version = "1.0.193", features = ["derive"] }
termcolor = "1.1.3"
thiserror = "1.0.34"
tokio = { version = "1.17.0", features = ["io-std", "rt"], optional = true }
tower-lsp = { version = "0.19.0", optional = true }
tree-sitter = { version = "0.20.4", optional = true }
tree-sitter-highlight = { version = "0.20.1", optional = true }
tree-sitter-lox = { version = "0.1.0", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.67"

[target.'cfg(not(any(miri, target_family = "wasm")))'.dependencies]
mimalloc = { version = "0.1.27", default-features = false }

[build-dependencies]
build-deps = "0.1.4"
lalrpop = { version = "0.19.1", default-features = false }

[dev-dependencies]
pretty_assertions = "1.1.0"
test-generator = "0.3.0"
parameterized_test = "0.2.1"

[profile.release]
codegen-units = 1
debug = false
lto = true
panic = "abort"
strip = true

[profile.pprof]
codegen-units = 16
debug = 2
inherits = "release"
lto = false
strip = false
