[package]
name = "lox-wasm"
authors = [
    "Kylee Tilley <kyleetilley@gmail.com>",
    "Ajeet D'Souza <98ajeet@gmail.com>",
    "Kartik Sharma <kartik.sharma522@gmail.com>",
]
categories = ["development-tools"]
description = "Webassembly build of Locks for the playground"
edition = "2021"
license = "MIT"
repository = "https://github.com/kyleect/locks"
rust-version = "1.73"
version = "1.0.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
askama_escape = "0.10.3"
console_error_panic_hook = "0.1.7"
locks = { path = "../../../", default-features = false}
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
termcolor = "1.2.0"
wasm-bindgen = "0.2.84"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
